--- a/Squirrel/Squirrel.Domain/Squirrel.Domain.csproj
+++ b/Squirrel/Squirrel.Domain/Squirrel.Domain.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{607F71E4-7775-4A44-A816-73B044DAD55C}</ProjectGuid>
+    <ProjectGuid>{9F182785-67C7-4ABB-9306-B330AF9B5FD3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Squirrel.Data</RootNamespace>
-    <AssemblyName>Squirrel.Data</AssemblyName>
+    <RootNamespace>Squirrel.Domain</RootNamespace>
+    <AssemblyName>Squirrel.Domain</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,12 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework">
-      <HintPath>..\packages\EntityFramework.6.1.2\lib\net45\EntityFramework.dll</HintPath>
-    </Reference>
-    <Reference Include="EntityFramework.SqlServer">
-      <HintPath>..\packages\EntityFramework.6.1.2\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -46,12 +40,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Enititis\Attachment.cs" />
+    <Compile Include="Enititis\BaseEntity.cs" />
+    <Compile Include="Enititis\Category.cs" />
+    <Compile Include="Enititis\Comment.cs" />
+    <Compile Include="Enititis\Config.cs" />
+    <Compile Include="Enititis\File.cs" />
+    <Compile Include="Enititis\Post.cs" />
+    <Compile Include="Enititis\Profile.cs" />
+    <Compile Include="Enititis\Tag.cs" />
+    <Compile Include="Enititis\Topic.cs" />
+    <Compile Include="Enititis\User.cs" />
+    <Compile Include="Enititis\Vote.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
