--- a/Squirrel/Squirrel.Domain/Squirrel.Domain.csproj
+++ b/Squirrel/Squirrel.Domain/Squirrel.Domain.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Enititis\User.cs" />
     <Compile Include="Enititis\Vote.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResultModels\OperationResult.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
