--- a/Squirrel/Squirrel.Domain/Squirrel.Domain.csproj
+++ b/Squirrel/Squirrel.Domain/Squirrel.Domain.csproj
@@ -40,6 +40,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConfigModels\UserServiceConfig.cs" />
+    <Compile Include="Cryptography\Hashing.cs" />
+    <Compile Include="Cryptography\Rsa.cs" />
+    <Compile Include="Cryptography\RsaKeyModel.cs" />
+    <Compile Include="Cryptography\Symmetric.cs" />
     <Compile Include="Enititis\BaseEntity.cs" />
     <Compile Include="Enititis\Category.cs" />
     <Compile Include="Enititis\Comment.cs" />
@@ -52,7 +57,29 @@
     <Compile Include="Enititis\User.cs" />
     <Compile Include="Enititis\Vote.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resources\ServiceMessages.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ServiceMessages.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Resources\ValidationErrors.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ValidationErrors.resx</DependentUpon>
+    </Compile>
     <Compile Include="ResultModels\OperationResult.cs" />
+    <Compile Include="ViewModels\UserViewModels.cs" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\ServiceMessages.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>ServiceMessages.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\ValidationErrors.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>ValidationErrors.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
