--- a/Squirrel/Squirrel.Service/Squirrel.Service.csproj
+++ b/Squirrel/Squirrel.Service/Squirrel.Service.csproj
@@ -4,13 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{607F71E4-7775-4A44-A816-73B044DAD55C}</ProjectGuid>
+    <ProjectGuid>{35053FFA-16CB-49B1-9AEE-B513E0B89718}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Squirrel.Data</RootNamespace>
-    <AssemblyName>Squirrel.Data</AssemblyName>
+    <RootNamespace>Squirrel.Service</RootNamespace>
+    <AssemblyName>Squirrel.Service</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -36,7 +37,7 @@
     <Reference Include="EntityFramework.SqlServer">
       <HintPath>..\packages\EntityFramework.6.1.2\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Practices.Unity">
+    <Reference Include="Microsoft.Practices.Unity, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Unity.3.5.1404.0\lib\net45\Microsoft.Practices.Unity.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.Unity.Configuration">
@@ -55,49 +56,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataIOC.cs" />
-    <Compile Include="Interfaces\IRepositoryContext.cs" />
-    <Compile Include="Interfaces\IWarehouseContext.cs" />
-    <Compile Include="Migrations\201501131608532_initialCreate.cs" />
-    <Compile Include="Migrations\201501131608532_initialCreate.Designer.cs">
-      <DependentUpon>201501131608532_initialCreate.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201501170938401_ChangeEntities.cs" />
-    <Compile Include="Migrations\201501170938401_ChangeEntities.Designer.cs">
-      <DependentUpon>201501170938401_ChangeEntities.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201501171243353_EditEntities.cs" />
-    <Compile Include="Migrations\201501171243353_EditEntities.Designer.cs">
-      <DependentUpon>201501171243353_EditEntities.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Interfaces\IUserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\WarehouseContext.cs" />
-    <Compile Include="Services\RepositoryContext.cs" />
-    <Compile Include="SquirrelContext.cs" />
+    <Compile Include="ServiceIOC.cs" />
+    <Compile Include="Services\UserService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
+    <ProjectReference Include="..\Squirrel.Data\Squirrel.Data.csproj">
+      <Project>{607f71e4-7775-4a44-a816-73b044dad55c}</Project>
+      <Name>Squirrel.Data</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Squirrel.Domain\Squirrel.Domain.csproj">
       <Project>{9f182785-67c7-4abb-9306-b330af9b5fd3}</Project>
       <Name>Squirrel.Domain</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Migrations\201501131608532_initialCreate.resx">
-      <DependentUpon>201501131608532_initialCreate.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201501170938401_ChangeEntities.resx">
-      <DependentUpon>201501170938401_ChangeEntities.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201501171243353_EditEntities.resx">
-      <DependentUpon>201501171243353_EditEntities.cs</DependentUpon>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
