--- a/Squirrel/Squirrel.Test/Squirrel.Test.csproj
+++ b/Squirrel/Squirrel.Test/Squirrel.Test.csproj
@@ -59,7 +59,10 @@
   </Choose>
   <ItemGroup>
     <Compile Include="DataLayer\RepositoryContextTest.cs" />
+    <Compile Include="DomainLayer\CryptographyHashingTest.cs" />
+    <Compile Include="DomainLayer\CryptographySymmetricTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServiceLayer\UserServiceTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Squirrel.Data\Squirrel.Data.csproj">
@@ -70,13 +73,19 @@
       <Project>{9f182785-67c7-4abb-9306-b330af9b5fd3}</Project>
       <Name>Squirrel.Domain</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Squirrel.Service\Squirrel.Service.csproj">
+      <Project>{35053ffa-16cb-49b1-9aee-b513e0b89718}</Project>
+      <Name>Squirrel.Service</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Squirrel.Web\Squirrel.Web.csproj">
       <Project>{7ce388ca-4f3d-4f10-92e3-fa6bf2f3964d}</Project>
       <Name>Squirrel.Web</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <Choose>
