--- a/Squirrel/packages/repositories.config
+++ b/Squirrel/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Squirrel.Data\packages.config" />
+  <repository path="..\Squirrel.Service\packages.config" />
   <repository path="..\Squirrel.Test\packages.config" />
   <repository path="..\Squirrel.Web\packages.config" />
 </repositories>
