--- a/Squirrel/Squirrel.Data/Squirrel.Data.csproj
+++ b/Squirrel/Squirrel.Data/Squirrel.Data.csproj
@@ -70,6 +70,10 @@
     <Compile Include="Migrations\201501171243353_EditEntities.Designer.cs">
       <DependentUpon>201501171243353_EditEntities.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201501181011124_ChangeUserEntity.cs" />
+    <Compile Include="Migrations\201501181011124_ChangeUserEntity.Designer.cs">
+      <DependentUpon>201501181011124_ChangeUserEntity.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\WarehouseContext.cs" />
@@ -95,6 +99,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201501171243353_EditEntities.resx">
       <DependentUpon>201501171243353_EditEntities.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201501181011124_ChangeUserEntity.resx">
+      <DependentUpon>201501181011124_ChangeUserEntity.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
