--- a/Squirrel/Squirrel.Domain/Squirrel.Domain.csproj
+++ b/Squirrel/Squirrel.Domain/Squirrel.Domain.csproj
@@ -64,6 +64,7 @@
       <DependentUpon>ValidationErrors.resx</DependentUpon>
     </Compile>
     <Compile Include="ResultModels\OperationResult.cs" />
+    <Compile Include="ViewModels\CategoryViewModels.cs" />
     <Compile Include="ViewModels\ProfileViewModels.cs" />
     <Compile Include="ViewModels\FileViewModels.cs" />
     <Compile Include="ViewModels\UserViewModels.cs" />
