--- a/Squirrel/Squirrel.Data/Squirrel.Data.csproj
+++ b/Squirrel/Squirrel.Data/Squirrel.Data.csproj
@@ -58,9 +58,17 @@
     <Compile Include="DataIOC.cs" />
     <Compile Include="Interfaces\IRepositoryContext.cs" />
     <Compile Include="Interfaces\IWarehouseContext.cs" />
-    <Compile Include="Migrations\201501181513288_InitialCreate.cs" />
-    <Compile Include="Migrations\201501181513288_InitialCreate.Designer.cs">
-      <DependentUpon>201501181513288_InitialCreate.cs</DependentUpon>
+    <Compile Include="Migrations\201501190547036_ReCreate.cs" />
+    <Compile Include="Migrations\201501190547036_ReCreate.Designer.cs">
+      <DependentUpon>201501190547036_ReCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201501190642146_ChangeCategory.cs" />
+    <Compile Include="Migrations\201501190642146_ChangeCategory.Designer.cs">
+      <DependentUpon>201501190642146_ChangeCategory.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201501190654305_ChangeCategory1.cs" />
+    <Compile Include="Migrations\201501190654305_ChangeCategory1.Designer.cs">
+      <DependentUpon>201501190654305_ChangeCategory1.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -79,8 +87,14 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201501181513288_InitialCreate.resx">
-      <DependentUpon>201501181513288_InitialCreate.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201501190547036_ReCreate.resx">
+      <DependentUpon>201501190547036_ReCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201501190642146_ChangeCategory.resx">
+      <DependentUpon>201501190642146_ChangeCategory.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201501190654305_ChangeCategory1.resx">
+      <DependentUpon>201501190654305_ChangeCategory1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
