--- a/Squirrel/Squirrel.Test/Squirrel.Test.csproj
+++ b/Squirrel/Squirrel.Test/Squirrel.Test.csproj
@@ -62,6 +62,8 @@
     <Compile Include="DomainLayer\CryptographyHashingTest.cs" />
     <Compile Include="DomainLayer\CryptographySymmetricTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServiceLayer\TopicServiceTest.cs" />
+    <Compile Include="ServiceLayer\CategoryServiceTest.cs" />
     <Compile Include="ServiceLayer\ProfileServiceTest.cs" />
     <Compile Include="ServiceLayer\UserServiceTest.cs" />
   </ItemGroup>
