--- a/Squirrel/packages/repositories.config
+++ b/Squirrel/packages/repositories.config
@@ -3,5 +3,6 @@
   <repository path="..\Squirrel.Data\packages.config" />
   <repository path="..\Squirrel.Service\packages.config" />
   <repository path="..\Squirrel.Test\packages.config" />
+  <repository path="..\Squirrel.Utility\packages.config" />
   <repository path="..\Squirrel.Web\packages.config" />
 </repositories>
