--- a/Squirrel/Squirrel.Data/Squirrel.Data.csproj
+++ b/Squirrel/Squirrel.Data/Squirrel.Data.csproj
@@ -62,6 +62,10 @@
     <Compile Include="Migrations\201501241529436_Recreate.Designer.cs">
       <DependentUpon>201501241529436_Recreate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201501270457131_ChangeConfig.cs" />
+    <Compile Include="Migrations\201501270457131_ChangeConfig.Designer.cs">
+      <DependentUpon>201501270457131_ChangeConfig.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\WarehouseContext.cs" />
@@ -81,6 +85,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201501241529436_Recreate.resx">
       <DependentUpon>201501241529436_Recreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201501270457131_ChangeConfig.resx">
+      <DependentUpon>201501270457131_ChangeConfig.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
