--- a/Squirrel/Squirrel.Web/Squirrel.Web.csproj
+++ b/Squirrel/Squirrel.Web/Squirrel.Web.csproj
@@ -140,12 +140,13 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
-    <Compile Include="Areas\Admin\Controllers\CategoryController.cs" />
-    <Compile Include="Areas\Admin\Controllers\ConfigController.cs" />
+    <Compile Include="Areas\Admin\Controllers\CategoriesController.cs" />
+    <Compile Include="Areas\Admin\Controllers\ConfigsController.cs" />
     <Compile Include="Areas\Admin\Controllers\MainController.cs" />
     <Compile Include="Areas\Admin\Controllers\UsersController.cs" />
     <Compile Include="Areas\Author\AuthorAreaRegistration.cs" />
-    <Compile Include="Areas\Author\Controllers\MainController.cs" />
+    <Compile Include="Areas\Author\Controllers\CategoriesController.cs" />
+    <Compile Include="Areas\Author\Controllers\PanelController.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -178,7 +179,7 @@
     <Content Include="Areas\Admin\Views\Main\Index.cshtml" />
     <Content Include="Areas\Author\Views\_ViewStart.cshtml" />
     <Content Include="Areas\Author\Views\Shared\_Layout.cshtml" />
-    <Content Include="Areas\Author\Views\Main\Index.cshtml" />
+    <Content Include="Areas\Author\Views\Panel\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Users\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Users\List.cshtml" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -194,6 +195,18 @@
     <Content Include="Areas\Admin\Views\Users\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\Users\Remove.cshtml" />
     <Content Include="Areas\Admin\Views\Users\ResetPassword.cshtml" />
+    <Content Include="Areas\Admin\Views\Configs\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Configs\SearchFilter.cshtml" />
+    <Content Include="Areas\Admin\Views\Configs\List.cshtml" />
+    <Content Include="Areas\Admin\Views\Configs\Add.cshtml" />
+    <Content Include="Areas\Admin\Views\Configs\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\Configs\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\Configs\Remove.cshtml" />
+    <Content Include="Areas\Author\Views\Categories\Index.cshtml" />
+    <Content Include="Areas\Author\Views\Categories\Tree.cshtml" />
+    <Content Include="Areas\Author\Views\Shared\_Message.cshtml" />
+    <Content Include="Areas\Author\Views\Categories\Add.cshtml" />
+    <Content Include="Areas\Author\Views\Categories\Details.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -255,8 +268,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\Admin\Models\" />
-    <Folder Include="Areas\Admin\Views\Category\" />
-    <Folder Include="Areas\Admin\Views\Config\" />
+    <Folder Include="Areas\Admin\Views\Categories\" />
     <Folder Include="Areas\Author\Models\" />
     <Folder Include="Views\Base\" />
   </ItemGroup>
