--- a/Squirrel/Squirrel.Web/Web.config
+++ b/Squirrel/Squirrel.Web/Web.config
@@ -25,9 +25,14 @@
       <forms loginUrl="~/account/login" protection="All" timeout="30" name="SQAUTH" path="/" requireSSL="false" slidingExpiration="true" defaultUrl="/home" cookieless="UseDeviceProfile" enableCrossAppRedirects="false" />
     </authentication>
     <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" maxRequestLength="102400" />
   </system.web>
   <system.webServer>
+    <security>
+      <requestFiltering>
+        <requestLimits maxAllowedContentLength="104857600" />
+      </requestFiltering>
+    </security>
     <modules>
       <!--<remove name="FormsAuthentication" />-->
     </modules>
