--- a/Squirrel/Squirrel.Web/Squirrel.Web.csproj
+++ b/Squirrel/Squirrel.Web/Squirrel.Web.csproj
@@ -249,6 +249,9 @@
     <Content Include="Areas\Author\Views\Files\Add.cshtml" />
     <Content Include="Areas\Author\Views\Files\Index.cshtml" />
     <Content Include="Areas\Author\Views\Files\Upload.cshtml" />
+    <Content Include="Areas\Author\Views\Files\SearchFilter.cshtml" />
+    <Content Include="Areas\Author\Views\Files\List.cshtml" />
+    <Content Include="Areas\Author\Views\Shared\Paging.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
