--- a/Squirrel/Squirrel.Web/Squirrel.Web.csproj
+++ b/Squirrel/Squirrel.Web/Squirrel.Web.csproj
@@ -149,6 +149,7 @@
     <Compile Include="Areas\Author\Controllers\CategoriesController.cs" />
     <Compile Include="Areas\Author\Controllers\FilesController.cs" />
     <Compile Include="Areas\Author\Controllers\PanelController.cs" />
+    <Compile Include="Areas\Author\Controllers\ProfileController.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -256,6 +257,12 @@
     <Content Include="Areas\Author\Views\Files\Details.cshtml" />
     <Content Include="Areas\Author\Views\Files\Delete.cshtml" />
     <Content Include="Areas\Author\Views\Files\Replace.cshtml" />
+    <Content Include="Areas\Author\Views\Files\Request.cshtml" />
+    <Content Include="Areas\Author\Views\Categories\Avatar.cshtml" />
+    <Content Include="Areas\Author\Views\Profile\Index.cshtml" />
+    <Content Include="Areas\Author\Views\Profile\Details.cshtml" />
+    <Content Include="Areas\Author\Views\Profile\Create.cshtml" />
+    <Content Include="Areas\Author\Views\Profile\_Details.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
