Edit Post Files

--- a/.gitignore
+++ b/.gitignore
@@ -187,3 +187,4 @@ FakesAssemblies/
 GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
+Squirrel/Squirrel.Web/Content/Files/20150217/f85b2059-1b93-42a1-940b-03ca44f8c5b3/the_guide_to_mockups.zip
