--- a/Squirrel/Squirrel.Service/Squirrel.Service.csproj
+++ b/Squirrel/Squirrel.Service/Squirrel.Service.csproj
@@ -58,8 +58,10 @@
   <ItemGroup>
     <Compile Include="Interfaces\IBaseService.cs" />
     <Compile Include="Interfaces\ICategoryService.cs" />
+    <Compile Include="Interfaces\ICommentService.cs" />
     <Compile Include="Interfaces\IConfigService.cs" />
     <Compile Include="Interfaces\IFileService.cs" />
+    <Compile Include="Interfaces\ILogService.cs" />
     <Compile Include="Interfaces\IPostService.cs" />
     <Compile Include="Interfaces\IProfileService.cs" />
     <Compile Include="Interfaces\ITagService.cs" />
@@ -70,8 +72,10 @@
     <Compile Include="ServiceIOC.cs" />
     <Compile Include="Services\BaseService.cs" />
     <Compile Include="Services\CategoryService.cs" />
+    <Compile Include="Services\CommentService.cs" />
     <Compile Include="Services\ConfigService.cs" />
     <Compile Include="Services\FileService.cs" />
+    <Compile Include="Services\LogService.cs" />
     <Compile Include="Services\PostService.cs" />
     <Compile Include="Services\ProfileService.cs" />
     <Compile Include="Services\TagService.cs" />
