--- a/Squirrel/Squirrel.Utility/Squirrel.Utility.csproj
+++ b/Squirrel/Squirrel.Utility/Squirrel.Utility.csproj
@@ -79,6 +79,7 @@
     <Compile Include="FarsiTools\PersianDate.cs" />
     <Compile Include="Helpers\HtmlHelpers.cs" />
     <Compile Include="Helpers\SelectListExtensions.cs" />
+    <Compile Include="Helpers\StringExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
