--- a/Squirrel/Squirrel.Web/Web.config
+++ b/Squirrel/Squirrel.Web/Web.config
@@ -26,6 +26,7 @@
     </authentication>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" maxRequestLength="102400" />
+    <customErrors mode="RemoteOnly" defaultRedirect="~/Error" />
   </system.web>
   <system.webServer>
     <security>
