--- a/Squirrel/Squirrel.Data/Squirrel.Data.csproj
+++ b/Squirrel/Squirrel.Data/Squirrel.Data.csproj
@@ -66,6 +66,14 @@
     <Compile Include="Migrations\201502221314185_editlog.Designer.cs">
       <DependentUpon>201502221314185_editlog.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201502230739379_editlog1.cs" />
+    <Compile Include="Migrations\201502230739379_editlog1.Designer.cs">
+      <DependentUpon>201502230739379_editlog1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201502231122158_add-publishdate.cs" />
+    <Compile Include="Migrations\201502231122158_add-publishdate.Designer.cs">
+      <DependentUpon>201502231122158_add-publishdate.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\WarehouseContext.cs" />
@@ -88,6 +96,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201502221314185_editlog.resx">
       <DependentUpon>201502221314185_editlog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201502230739379_editlog1.resx">
+      <DependentUpon>201502230739379_editlog1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201502231122158_add-publishdate.resx">
+      <DependentUpon>201502231122158_add-publishdate.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
