--- a/Squirrel/Squirrel.Web/Squirrel.Web.csproj
+++ b/Squirrel/Squirrel.Web/Squirrel.Web.csproj
@@ -146,6 +146,7 @@
     <Compile Include="Areas\Admin\Controllers\MainController.cs" />
     <Compile Include="Areas\Admin\Controllers\UsersController.cs" />
     <Compile Include="Areas\Author\AuthorAreaRegistration.cs" />
+    <Compile Include="Areas\Author\Controllers\CommentsController.cs" />
     <Compile Include="Areas\Author\Controllers\FileApiController.cs" />
     <Compile Include="Areas\Author\Controllers\CategoriesController.cs" />
     <Compile Include="Areas\Author\Controllers\FilesController.cs" />
@@ -4461,6 +4462,11 @@
     <Content Include="Areas\Admin\Views\Logs\List.cshtml" />
     <Content Include="Areas\Admin\Views\Logs\Details.cshtml" />
     <Content Include="Areas\Admin\Views\Logs\Clean.cshtml" />
+    <Content Include="Areas\Author\Views\Comments\Post.cshtml" />
+    <Content Include="Areas\Author\Views\Comments\SearchFilter.cshtml" />
+    <Content Include="Areas\Author\Views\Comments\SearchResult.cshtml" />
+    <Content Include="Areas\Author\Views\Comments\PostDetails.cshtml" />
+    <Content Include="Areas\Author\Views\Comments\Add.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
