--- a/Squirrel/Squirrel.Data/Squirrel.Data.csproj
+++ b/Squirrel/Squirrel.Data/Squirrel.Data.csproj
@@ -78,6 +78,14 @@
     <Compile Include="Migrations\201502250614538_edit-comment.Designer.cs">
       <DependentUpon>201502250614538_edit-comment.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201503161217548_issueId.cs" />
+    <Compile Include="Migrations\201503161217548_issueId.Designer.cs">
+      <DependentUpon>201503161217548_issueId.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201503161220139_issueId-change.cs" />
+    <Compile Include="Migrations\201503161220139_issueId-change.Designer.cs">
+      <DependentUpon>201503161220139_issueId-change.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\WarehouseContext.cs" />
@@ -109,6 +117,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201502250614538_edit-comment.resx">
       <DependentUpon>201502250614538_edit-comment.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201503161217548_issueId.resx">
+      <DependentUpon>201503161217548_issueId.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201503161220139_issueId-change.resx">
+      <DependentUpon>201503161220139_issueId-change.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
