--- a/Squirrel/Squirrel.Web/Squirrel.Web.csproj
+++ b/Squirrel/Squirrel.Web/Squirrel.Web.csproj
@@ -4371,7 +4371,38 @@
     <Content Include="Content\themes\base\tabs.css" />
     <Content Include="Content\themes\base\theme.css" />
     <Content Include="Content\themes\base\tooltip.css" />
+    <Content Include="Content\themes\vone\fonts.css" />
+    <Content Include="Content\themes\vone\fonts\IranSansZ\iransansz-webfont.svg" />
+    <Content Include="Content\themes\vone\fonts\IRNazanin\irnazaninbold.svg" />
+    <Content Include="Content\themes\vone\fonts\IRNazanin\irnazaninregular.svg" />
+    <Content Include="Content\themes\vone\fonts\IRYekan\iryekan.css" />
+    <Content Include="Content\themes\vone\fonts\IRYekan\iryekan.svg" />
+    <Content Include="Content\themes\vone\fonts\IRYekan\iryekanbold.svg" />
+    <Content Include="Content\themes\vone\fonts\IRYekan\iryekansl.svg" />
+    <Content Include="Content\themes\vone\fonts\Pe7stroke\assets\docs\style.css" />
+    <Content Include="Content\themes\vone\fonts\Pe7stroke\assets\fonts\Pe-icon-7-stroke.svg" />
+    <Content Include="Content\themes\vone\fonts\Pe7stroke\assets\images\background-paralax.jpg" />
+    <Content Include="Content\themes\vone\fonts\Pe7stroke\assets\images\logo.png" />
+    <Content Include="Content\themes\vone\fonts\Pe7stroke\assets\libs\css\bootstrap-select.css" />
+    <Content Include="Content\themes\vone\fonts\Pe7stroke\assets\libs\css\bootstrap.min.css" />
+    <Content Include="Content\themes\vone\fonts\Pe7stroke\assets\libs\css\prism.css" />
+    <Content Include="Content\themes\vone\fonts\Pe7stroke\assets\libs\js\bootstrap-select.min.js" />
+    <Content Include="Content\themes\vone\fonts\Pe7stroke\assets\libs\js\bootstrap.min.js" />
+    <Content Include="Content\themes\vone\fonts\Pe7stroke\assets\libs\js\jquery-1.11.1.min.js" />
+    <Content Include="Content\themes\vone\fonts\Pe7stroke\assets\libs\js\prism.js" />
+    <Content Include="Content\themes\vone\fonts\Pe7stroke\assets\Pe-icon-7-stroke.css" />
+    <Content Include="Content\themes\vone\fonts\Pe7stroke\assets\refs\main.js" />
+    <Content Include="Content\themes\vone\fonts\Pe7stroke\assets\refs\style.css" />
+    <Content Include="Content\themes\vone\fonts\Pe7stroke\documentation.html" />
+    <Content Include="Content\themes\vone\fonts\Pe7stroke\pe-icon-7-stroke\css\helper.css" />
+    <Content Include="Content\themes\vone\fonts\Pe7stroke\pe-icon-7-stroke\css\pe-icon-7-stroke.css" />
+    <Content Include="Content\themes\vone\fonts\Pe7stroke\pe-icon-7-stroke\fonts\Pe-icon-7-stroke.svg" />
+    <Content Include="Content\themes\vone\fonts\Pe7stroke\reference.html" />
+    <Content Include="Content\themes\vone\fonts\SegoeUI\segoeui.svg" />
+    <Content Include="Content\themes\vone\fonts\SegoeUI\segoeuisl.css" />
+    <Content Include="Content\themes\vone\fonts\SegoeUI\segoeuisl.svg" />
     <Content Include="Content\themes\vone\images\favicon.png" />
+    <Content Include="Content\themes\vone\images\Logo.svg" />
     <Content Include="Content\themes\vone\main.css">
       <DependentUpon>main.less</DependentUpon>
     </Content>
@@ -4490,6 +4521,47 @@
     <Content Include="Content\themes\vone\main.css.map">
       <DependentUpon>main.css</DependentUpon>
     </Content>
+    <Content Include="Content\themes\vone\fonts\IranSansZ\iransansz-webfont.eot" />
+    <Content Include="Content\themes\vone\fonts\IranSansZ\iransansz-webfont.svgz" />
+    <Content Include="Content\themes\vone\fonts\IranSansZ\iransansz-webfont.ttf" />
+    <Content Include="Content\themes\vone\fonts\IranSansZ\iransansz-webfont.woff" />
+    <Content Include="Content\themes\vone\fonts\IRSans\irsans.eot" />
+    <Content Include="Content\themes\vone\fonts\IRSans\irsans.ttf" />
+    <Content Include="Content\themes\vone\fonts\IRSans\irsans.woff" />
+    <Content Include="Content\themes\vone\fonts\IRYekan\iryekan.eot" />
+    <Content Include="Content\themes\vone\fonts\IRYekan\iryekan.ttf" />
+    <Content Include="Content\themes\vone\fonts\IRYekan\iryekan.woff" />
+    <Content Include="Content\themes\vone\fonts\IRYekan\iryekanbold.eot" />
+    <Content Include="Content\themes\vone\fonts\IRYekan\iryekanbold.ttf" />
+    <Content Include="Content\themes\vone\fonts\IRYekan\iryekanbold.woff" />
+    <Content Include="Content\themes\vone\fonts\IRYekan\iryekansl.eot" />
+    <Content Include="Content\themes\vone\fonts\IRYekan\iryekansl.otf" />
+    <Content Include="Content\themes\vone\fonts\IRYekan\iryekansl.ttf" />
+    <Content Include="Content\themes\vone\fonts\IRYekan\iryekansl.woff" />
+    <Content Include="Content\themes\vone\fonts\SegoeUI\segoeui.eot" />
+    <Content Include="Content\themes\vone\fonts\SegoeUI\segoeui.ttf" />
+    <Content Include="Content\themes\vone\fonts\SegoeUI\segoeui.woff" />
+    <Content Include="Content\themes\vone\fonts\SegoeUI\segoeuil.eot" />
+    <Content Include="Content\themes\vone\fonts\SegoeUI\segoeuil.ttf" />
+    <Content Include="Content\themes\vone\fonts\SegoeUI\segoeuil.woff" />
+    <Content Include="Content\themes\vone\fonts\SegoeUI\segoeuisl.eot" />
+    <Content Include="Content\themes\vone\fonts\SegoeUI\segoeuisl.ttf" />
+    <Content Include="Content\themes\vone\fonts\SegoeUI\segoeuisl.woff" />
+    <Content Include="Content\themes\vone\fonts\IRNazanin\irnazaninbold.eot" />
+    <Content Include="Content\themes\vone\fonts\IRNazanin\irnazaninbold.ttf" />
+    <Content Include="Content\themes\vone\fonts\IRNazanin\irnazaninbold.woff" />
+    <Content Include="Content\themes\vone\fonts\IRNazanin\irnazaninbold.woff2" />
+    <Content Include="Content\themes\vone\fonts\IRNazanin\irnazaninregular.eot" />
+    <Content Include="Content\themes\vone\fonts\IRNazanin\irnazaninregular.ttf" />
+    <Content Include="Content\themes\vone\fonts\IRNazanin\irnazaninregular.woff" />
+    <Content Include="Content\themes\vone\fonts\IRNazanin\irnazaninregular.woff2" />
+    <Content Include="Content\themes\vone\fonts\Pe7stroke\assets\fonts\Pe-icon-7-stroke.eot" />
+    <Content Include="Content\themes\vone\fonts\Pe7stroke\assets\fonts\Pe-icon-7-stroke.ttf" />
+    <Content Include="Content\themes\vone\fonts\Pe7stroke\assets\fonts\Pe-icon-7-stroke.woff" />
+    <Content Include="Content\themes\vone\fonts\Pe7stroke\assets\libs\js\jquery-1.11.1.min.map" />
+    <Content Include="Content\themes\vone\fonts\Pe7stroke\pe-icon-7-stroke\fonts\Pe-icon-7-stroke.eot" />
+    <Content Include="Content\themes\vone\fonts\Pe7stroke\pe-icon-7-stroke\fonts\Pe-icon-7-stroke.ttf" />
+    <Content Include="Content\themes\vone\fonts\Pe7stroke\pe-icon-7-stroke\fonts\Pe-icon-7-stroke.woff" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
